@@ -10,6 +10,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2018-10-23 niel
+	Add: New anime title regex in PPA to capture more titles correctly.
 2018-10-17 niel
 	Fix: Make generic music subject regex actually matche the example. Simplify returns for
 		CollectionsCleaning::generic() method.
